<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <EditText
        android:id="@+id/emailBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/rollno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rollno"
        android:layout_marginTop="24dp"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/room_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/roomno"
        android:layout_marginTop="24dp"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:layout_marginTop="24dp"
        android:inputType="textPassword"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/repass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repass"
        android:layout_marginTop="24dp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:singleLine="true"/>

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/Register"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="24dp"/>

    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Register"-->
    <!--android:id="@+id/registerButton"-->
    <!--android:layout_marginTop="10dp"/>-->

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Click here to login"-->
    <!--android:textSize="20dp"-->
    <!--android:layout_marginTop="15dp"-->
    <!--android:gravity="center"-->
    <!--android:id="@+id/loginLink"-->
    <!--android:textColor="#0D47A1"/>-->
</LinearLayout>