<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <EditText
        android:id="@+id/workerid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/workerid"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/Student_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rollno"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/Student_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/roomno"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/data_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/submit"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"/>
    
    <RadioGroup
        android:id="@+id/radio_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <RadioButton
            android:id="@+id/radio_sweep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:hint="Sweep"
            android:paddingRight="16dp" />

        <RadioButton
            android:id="@+id/radio_mop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Mop" />
    </RadioGroup>

   



</LinearLayout>
